--- a/calcular.html
+++ b/calcular.html
@@ -46,8 +46,11 @@
         </div>
       </div>
       
-      <div class="explicacao">
-        <h3>Sobre o 1RM e a Fórmula de Epley</h3>
+    </section>
+
+    <section>
+      <div>
+        <h2>Sobre o 1RM e a Fórmula de Epley</h2>
         <p>O 1RM (Uma Repetição Máxima) representa o peso máximo que você pode levantar em um único exercício com a técnica correta.</p>
         <p>A <strong>Fórmula de Epley</strong> é um método preciso para estimar seu 1RM sem precisar tentar o peso máximo, reduzindo o risco de lesões.</p>
         <p>Para melhores resultados, use um peso que você consegue levantar entre 2 e 10 repetições.</p>
