--- a/sobre.html
+++ b/sobre.html
@@ -34,9 +34,9 @@
             <dd>Professor Daniel Hasan - Orientação pedagógica</dd>
             
             <dt>Créditos</dt>
-            <dd>Imagens de atletas obtidas de fontes públicas com permissão para uso educacional</dd>
-            <dd>Conteúdo baseado em pesquisas científicas da área de Educação Física</dd>
+            <dd>Imagens por Getty Images, Marcas pelo Mundo e Mr. Olympia Brasil</dd>
             <dd>Ícones por Font Awesome e Flat Icon</dd>
+            <dd>Conteúdo baseado em artigos de UOL, O Globo e Integralmedica</dd>
           </dl>
       </div>
     </section>
