--- a/sobre.html
+++ b/sobre.html
@@ -16,7 +16,7 @@
       <li><a href="index.html">Início</a></li>
       <li><a href="tipos.html">Tipos de Treino</a></li>
       <li><a href="calcular.html">Calculadora 1RM</a></li>
-      <li><a href="sobre.html">Sobre</a></li>
+      <li><a href="sobre.html" class="ativo">Sobre</a></li>
     </ul>
   </nav>
 </header>
