--- a/tipos.html
+++ b/tipos.html
@@ -14,7 +14,7 @@
   <nav>
     <ul class="menu">
       <li><a href="index.html">Início</a></li>
-      <li><a href="tipos.html">Tipos de Treino</a></li>
+      <li><a href="tipos.html" class="ativo">Tipos de Treino</a></li>
       <li><a href="calcular.html">Calculadora 1RM</a></li>
       <li><a href="sobre.html">Sobre</a></li>
     </ul>
@@ -90,7 +90,7 @@
         </div>
       </div>
     </section>
-    
+
     <section class="tabela-selecao">
       <h2>Resumo dos Tipos de Treino</h2>
       <table>
@@ -124,6 +124,7 @@
           </tr>
         </tbody>
       </table>
+      
     </section>
 
     <a href="#topo-da-pagina" id="voltar-topo"></a>
@@ -133,5 +134,4 @@
     <p>&copy; 2025 Força Total</p>
   </footer>
 </body>
-
 </html>
