--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1 class="logo">Força Total</h1>
   <nav>
     <ul class="menu">
-      <li><a href="index.html">Início</a></li>
+      <li><a href="index.html" class="ativo">Início</a></li>
       <li><a href="tipos.html">Tipos de Treino</a></li>
       <li><a href="calcular.html">Calculadora 1RM</a></li>
       <li><a href="sobre.html">Sobre</a></li>
